# aksara

./: .gitignore  HANDOFF.md  LICENSE  README.md
.github/workflows/: api.yml  ui.yml
api/: .env.example  Cargo.toml  README.md
api/src/: main.rs  routes.rs  state.rs
api/src/feature/: mod.rs
api/src/feature/aksara/: handlers.rs  mod.rs  model.rs  routes.rs
api/src/infrastructure/: config.rs  logging.rs  mod.rs  server.rs
api/src/infrastructure/web/: cors.rs  mod.rs
api/src/infrastructure/web/extractor/: mod.rs  wallet.rs
api/src/infrastructure/web/middleware/: http_trace.rs  mod.rs  on_chain.rs  wallet_auth.rs
api/src/infrastructure/web/response/: error.rs  success.rs
contract/: Anchor.toml  Cargo.toml
contract/programs/aksara/: Cargo.toml
contract/programs/aksara/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
contract/programs/aksara/src/instructions/: grant_access.rs  mod.rs  revoke_access.rs
contract/programs/contract/src/: lib.rs
contract/tests/: contract.ts
ui/: .env.example  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
ui/src/: main.tsx  routeTree.gen.ts
ui/src/api/: client.ts  endpoints.ts  types.ts
ui/src/components/: api-tester.tsx  auto-sign-toggle.tsx  grant-panel.tsx  playground.tsx  wallet-button.tsx
ui/src/components/icons/: solana.tsx
ui/src/components/ui/: button.tsx
ui/src/hooks/: use-aksara-program.ts  use-app-wallet.tsx  use-owner.ts  use-protected-api.ts  use-signed-api.ts
ui/src/hooks/messages/: index.ts  use-create-message.ts  use-delete-message.ts  use-message.ts  use-messages.ts  use-my-messages.ts  use-update-message.ts
ui/src/idl/: aksara.json
ui/src/lib/: app-wallet.ts  env.ts  sign-request.ts  signed-fetch.ts  types.ts
ui/src/providers/: solana.tsx  tanstack-query.tsx
ui/src/routes/: __root.tsx  grants.tsx  index.tsx
