[package]
name = "aksara"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bs58 = "0.5.1"
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
ed25519-dalek = "2.2.0"
eyre = "0.6.12"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["serde", "env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }
